; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_wt-monitor-win32.c_get_handle_of_path.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_wt-monitor-win32.c_get_handle_of_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FILE_LIST_DIRECTORY = common dso_local global i32 0, align 4
@FILE_SHARE_DELETE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@FILE_SHARE_WRITE = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@FILE_FLAG_BACKUP_SEMANTICS = common dso_local global i32 0, align 4
@FILE_FLAG_OVERLAPPED = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [56 x i8] c"failed to create dir handle for path %s, error code %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @get_handle_of_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_handle_of_path(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i64 0, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @FILE_LIST_DIRECTORY, align 4
  %8 = load i32, i32* @FILE_SHARE_DELETE, align 4
  %9 = load i32, i32* @FILE_SHARE_READ, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @FILE_SHARE_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @OPEN_EXISTING, align 4
  %14 = load i32, i32* @FILE_FLAG_BACKUP_SEMANTICS, align 4
  %15 = load i32, i32* @FILE_FLAG_OVERLAPPED, align 4
  %16 = or i32 %14, %15
  %17 = call i64 @CreateFileW(i32* %6, i32 %7, i32 %12, i32* null, i32 %13, i32 %16, i32* null)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %1
  %22 = load i32*, i32** %3, align 8
  %23 = call i8* @g_utf16_to_utf8(i32* %22, i32 -1, i32* null, i32* null, i32* null)
  store i8* %23, i8** %5, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 (...) @GetLastError()
  %26 = call i32 @seaf_warning(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i8* %24, i32 %25)
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @g_free(i8* %27)
  store i64 0, i64* %2, align 8
  br label %31

29:                                               ; preds = %1
  %30 = load i64, i64* %4, align 8
  store i64 %30, i64* %2, align 8
  br label %31

31:                                               ; preds = %29, %21
  %32 = load i64, i64* %2, align 8
  ret i64 %32
}

declare dso_local i64 @CreateFileW(i32*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i8* @g_utf16_to_utf8(i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @seaf_warning(i8*, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
